Release MMMod 1.0.19 for Minecraft 1.20.1